--- a/src/bootstrap-extra.scss
+++ b/src/bootstrap-extra.scss
@@ -8,6 +8,7 @@ math-item, .math-item {
     margin: -4px;  /* -(border-width + padding) */
     outline: none;
     cursor: pointer;
+    white-space: nowrap;
 
     &:hover, &.highlight {
         border: 3px solid $item-hover-border;
