--- a/libs/bootstrap/bootstrap.css
+++ b/libs/bootstrap/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=12341dfe573cc53464ef)
- * Config saved to config.json and https://gist.github.com/12341dfe573cc53464ef
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=9c47d97212021835b98c)
+ * Config saved to config.json and https://gist.github.com/9c47d97212021835b98c
  */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
@@ -1015,7 +1015,7 @@ body {
   font-size: 13px;
   line-height: 1.846;
   color: #666666;
-  background-color: #ffffff;
+  background-color: #f8f8f8;
 }
 input,
 button,
@@ -1056,7 +1056,7 @@ img {
 .img-thumbnail {
   padding: 4px;
   line-height: 1.846;
-  background-color: #ffffff;
+  background-color: #f8f8f8;
   border: 1px solid #dddddd;
   border-radius: 3px;
   -webkit-transition: all 0.2s ease-in-out;
@@ -2056,7 +2056,7 @@ fieldset[disabled] .btn {
 }
 .btn-default {
   color: #666666;
-  background-color: #ffffff;
+  background-color: #f8f8f8;
   border-color: #eeeeee;
 }
 .btn-default:hover,
@@ -2066,7 +2066,7 @@ fieldset[disabled] .btn {
 .btn-default.active,
 .open > .dropdown-toggle.btn-default {
   color: #666666;
-  background-color: #e6e6e6;
+  background-color: #dfdfdf;
   border-color: #cfcfcf;
 }
 .btn-default:active,
@@ -2092,11 +2092,11 @@ fieldset[disabled] .btn-default:active,
 .btn-default.disabled.active,
 .btn-default[disabled].active,
 fieldset[disabled] .btn-default.active {
-  background-color: #ffffff;
+  background-color: #f8f8f8;
   border-color: #eeeeee;
 }
 .btn-default .badge {
-  color: #ffffff;
+  color: #f8f8f8;
   background-color: #666666;
 }
 .btn-primary {
@@ -2822,7 +2822,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .nav-tabs.nav-justified > .active > a,
   .nav-tabs.nav-justified > .active > a:hover,
   .nav-tabs.nav-justified > .active > a:focus {
-    border-bottom-color: #ffffff;
+    border-bottom-color: #f8f8f8;
   }
 }
 .nav-pills > li {
@@ -2890,7 +2890,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   .nav-tabs-justified > .active > a,
   .nav-tabs-justified > .active > a:hover,
   .nav-tabs-justified > .active > a:focus {
-    border-bottom-color: #ffffff;
+    border-bottom-color: #f8f8f8;
   }
 }
 .tab-content > .tab-pane {
