--- a/src/bootstrap-extra.scss
+++ b/src/bootstrap-extra.scss
@@ -101,118 +101,87 @@ math-item {
 
 }
 
-$delay: 0.5s;
-$bar-width: 250px;
-$bar-padding: 15px;
+$delay: 0.2s;
+$barWidth: 200px;
+$barPadding: 15px;
+$barMargin: 2px;
+$barHeaderHeight: 36px;
 
 #math-ui-bar {
-    display: none;
-    margin: 0;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    display: block;
+    position: fixed;
+    top: $barMargin;
+    bottom: $barMargin;
+    right: -($barWidth + 2*$barMargin);
+    width: $barWidth;
     overflow: auto;
-    padding: $bar-padding;
-    z-index: 100000;
-}
-
-html.math-ui-bar-dockleft {
-    margin-left: $bar-width+2*$bar-padding;
-
-    #math-ui-bar {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        width: $bar-width;
-        &.show {
-            display: block;
-        }
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+    -moz-transition: right $delay;
+    -webkit-transition: right $delay;
+    -ms-transition: right $delay;
+    -o-transition: right $delay;
+    transition: right $delay;
+    & > .panel {
+        margin-bottom: 0;
     }
 }
 
-html.math-ui-bar-floatleft {
+body.math-ui-show {
     #math-ui-bar {
-        display: block;
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        left: -($bar-width+2*$bar-padding);
-        width: $bar-width;
-        -moz-transition: left $delay;
-        -webkit-transition: left $delay;
-        -ms-transition: left $delay;
-        -o-transition: left $delay;
-        transition: left $delay;
-        &.show {
-            left: 0;
-        }
+        right: 2*$barMargin;
     }
 }
 
-html.math-ui-bar-dockright {
-    margin-right: $bar-width+2*$bar-padding;
+@media (min-width: 3*$barWidth) {
 
-    #math-ui-bar {
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        width: $bar-width;
-        &.show {
-            display: block;
-        }
+    html, body {
+        overflow: hidden;
     }
-}
 
-html.math-ui-bar-floatright {
-    #math-ui-bar {
-        display: block;
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        right: -($bar-width+2*$bar-padding);
-        width: $bar-width;
-        -moz-transition: right $delay;
-        -webkit-transition: right $delay;
-        -ms-transition: right $delay;
-        -o-transition: right $delay;
-        transition: right $delay;
-        &.show {
-            right: 0;
-        }
-    }
-}
-
-html.math-ui-bar-dockbottom {
-    margin-bottom: $bar-width+2*$bar-padding;
-
-    #math-ui-bar {
+    #main {
         position: fixed;
         left: 0;
+        top: 0;
         right: 0;
-        bottom: 0;
-        height: $bar-width;
-        &.show {
-            display: block;
-        }
+        height: 100%;
+        overflow: auto;
     }
-}
 
-html.math-ui-bar-floatbottom {
     #math-ui-bar {
-        display: block;
-        position: fixed;
-        left: 0;
-        right: 0;
-        bottom: -($bar-width+2*$bar-padding);
-        height: $bar-width;
-        -moz-transition: bottom $delay;
-        -webkit-transition: bottom $delay;
-        -ms-transition: bottom $delay;
-        -o-transition: bottom $delay;
-        transition: bottom $delay;
-        &.show {
-            bottom: 0;
+        display: none;
+    }
+
+    body.math-ui-show {
+        #main {
+            right: $barWidth + 2*$barMargin;
         }
+
+        #math-ui-bar {
+            display: block;
+            position: fixed;
+            right: $barMargin;
+            overflow: hidden;
+
+            & > .panel {
+                & > .panel-heading, & > .panel-body {
+                    position: fixed;
+                    right: $barMargin;
+                    width: $barWidth;
+                }
+                & > .panel-heading {
+                    top: $barMargin;
+                    height: 36px;
+                    overflow: hidden;
+                }
+                & > .panel-body {
+                    top: $barHeaderHeight + $barMargin;
+                    bottom: $barMargin;
+                    overflow: auto;
+                }
+            }
+        }
+
     }
 }
-
