--- a/libs/bootstrap/bootstrap.css
+++ b/libs/bootstrap/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=3003a1458cb89d5b5a70)
- * Config saved to config.json and https://gist.github.com/3003a1458cb89d5b5a70
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=a6317c115eceb91b950e)
+ * Config saved to config.json and https://gist.github.com/a6317c115eceb91b950e
  */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 html {
@@ -2903,6 +2903,24 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-top: -1px;
   border-top-right-radius: 0;
   border-top-left-radius: 0;
+}
+.breadcrumb {
+  padding: 8px 15px;
+  margin-bottom: 23px;
+  list-style: none;
+  background-color: #f5f5f5;
+  border-radius: 3px;
+}
+.breadcrumb > li {
+  display: inline-block;
+}
+.breadcrumb > li + li:before {
+  content: "/\00a0";
+  padding: 0 5px;
+  color: #cccccc;
+}
+.breadcrumb > .active {
+  color: #bbbbbb;
 }
 .list-group {
   margin-bottom: 20px;
